* encoding.c (load_encoding): predefined encoding names are safe.   [ruby-dev:44469] [Bug #5279] * transcode.c (load_transcoder_entry): ditto.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33201 b2dd03c8-39d4-4d8f-98ff-823fe69b080e