test/ruby/test_encoding.rb
@@ -99,4 +99,9 @@ class TestEncoding < Test::Unit::TestCase
     str2 = Marshal.load(Marshal.dump(str2))
     assert_equal(str, str2, '[ruby-dev:38596]')
   end
+
+  def test_unsafe
+    bug5279 = '[ruby-dev:44469]'
+    assert_ruby_status([], '$SAFE=3; "a".encode("utf-16be")', bug5279)
+  end
 end
